crates/htui/tests/snapshots/kinds__delete_ask.snap
---
source: crates/htui/tests/kinds.rs
expression: frame
---
vulkan-tutorials  Vulkan Tutorials
  ANA  analysis · graph analysis
    0. research · template research · gate soft · in none · budget inherit
    1. verdict · template verdict · gate hard · in research · budget inherit
  FEAT  feature · graph feature
    0. prd · template prd · gate hard · in none · budget inherit
    1. plan · template plan · gate hard · in prd · budget inherit
    2. implement · template implement · gate soft · in plan,review · budget inherit
    3. review · template review · gate soft · in implement · budget inherit
  FIX  bug · graph bug
    0. reproduce · template reproduce · gate soft · in none · budget inherit
    1. fix · template fix · gate soft · in reproduce,review · budget inherit
    2. review · template review · gate soft · in fix · budget inherit
  CLEAN  refactor · graph refactor
    0. plan · template plan · gate soft · in none · budget inherit
    1. implement · template implement · gate soft · in plan,review · budget inherit
    2. review · template review · gate soft · in implement · budget inherit
  TOOL  tooling · graph tooling
    0. plan · template plan · gate soft · in none · budget inherit
    1. implement · template implement · gate soft · in plan,review · budget inherit
    2. review · template review · gate soft · in implement · budget inherit







delete kind feature (FEAT)? a kind any item uses is refused. y delete · n/Esc stop
y delete · n/Esc stop
