crates/htui/tests/snapshots/kinds__demo.snap
---
source: crates/htui/tests/kinds.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Settings
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────┐
│ Agents  Hierarchy  Kinds                                                                         │
│vulkan-tutorials  Vulkan Tutorials                                                                │
│  ANA  analysis · graph analysis                                                                  │
│    0. research · template research · gate soft · in none · budget inherit                        │
│    1. verdict · template verdict · gate hard · in research · budget inherit                      │
│  FEAT  feature · graph feature                                                                   │
│    0. prd · template prd · gate hard · in none · budget inherit                                  │
│    1. plan · template plan · gate hard · in prd · budget inherit                                 │
│    2. implement · template implement · gate soft · in plan,review · budget inherit               │
│    3. review · template review · gate soft · in implement · budget inherit                       │
│  FIX  bug · graph bug                                                                            │
│    0. reproduce · template reproduce · gate soft · in none · budget inherit                      │
│    1. fix · template fix · gate soft · in reproduce,review · budget inherit                      │
│    2. review · template review · gate soft · in fix · budget inherit                             │
│  CLEAN  refactor · graph refactor                                                                │
│    0. plan · template plan · gate soft · in none · budget inherit                                │
│    1. implement · template implement · gate soft · in plan,review · budget inherit               │
│    2. review · template review · gate soft · in implement · budget inherit                       │
│  TOOL  tooling · graph tooling                                                                   │
│    0. plan · template plan · gate soft · in none · budget inherit                                │
│    1. implement · template implement · gate soft · in plan,review · budget inherit               │
│    2. review · template review · gate soft · in implement · budget inherit                       │
│                                                                                                  │
│                                                                                                  │
│j/k · n kind/phase · N graph · e edit · g graph · d delete kind · r reload                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
