crates/htui/tests/snapshots/kinds__editor_phase.snap
---
source: crates/htui/tests/kinds.rs
expression: frame
---
vulkan-tutorials  Vulkan Tutorials
  ANA  analysis · graph analysis
    0. research · template research · gate soft · in none · budget inherit
      fan_out 1 · gate always · isolation none · command_queue fan_out_only · verify_command none ·
      retry_limit 1 · output_kind research · template_version none — MOD-4 owns these
    1. verdict · template verdict · gate hard · in research · budget inherit
  FEAT  feature · graph feature
    0. prd · template prd · gate hard · in none · budget inherit
    1. plan · template plan · gate hard · in prd · budget inherit
    2. implement · template implement · gate soft · in plan,review · budget inherit
    3. review · template review · gate soft · in implement · budget inherit
  FIX  bug · graph bug
    0. reproduce · template reproduce · gate soft · in none · budget inherit
    1. fix · template fix · gate soft · in reproduce,review · budget inherit
    2. review · template review · gate soft · in fix · budget inherit
  CLEAN  refactor · graph refactor
    0. plan · template plan · gate soft · in none · budget inherit
    1. implement · template implement · gate soft · in plan,review · budget inherit
    2. review · template review · gate soft · in implement · budget inherit
  TOOL  tooling · graph tooling
    0. plan · template plan · gate soft · in none · budget inherit
    1. implement · template implement · gate soft · in plan,review · budget inherit
    2. review · template review · gate soft · in implement · budget inherit
name           : research
position       : 0
template_name  : research
gate_hard (y/n): n
input_kinds    :
token_budget   :
Tab/Shift+Tab field · Enter save · Esc cancel
